  QSslCertificate::subjectAlternativeNames() instead.

- QLibraryInfo::buildKey() has been removed. Likewise, the QT_BUILD_KEY
  preprocessor #define has also been removed. The build-key is obsolete
  and is no longer necessary.

- QCoreApplication::translate() will no longer return the source text when
  the translation is empty. Use lrelease -removeidentical for optimization.

****************************************************************************
*                           General                                        *
****************************************************************************

General Improvements
--------------------

-

Third party components
----------------------

-


****************************************************************************
*                          Library                                         *
****************************************************************************

QtCore
------
* drop a bogus QChar::NoCategory enum value; the proper QChar::Other_NotAssigned
  value is returned for an unassigned codepoints now.

QtGui
-----

QtWidgets
---------
* QWidget::setInputContext() is removed. Input contexts are now platform
  specific.

QtNetwork
---------

QtOpenGL
--------

QtScript
--------


****************************************************************************
*                          Database Drivers                                *
****************************************************************************


****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************

Qt for Linux/X11
----------------


Qt for Windows
--------------


Qt for Mac OS X
---------------


Qt for Embedded Linux
---------------------


Qt for Windows CE
-----------------


****************************************************************************